added extende project lifetime description

--- a/heat_storage_techno-economics.ipynb
+++ b/heat_storage_techno-economics.ipynb
@@ -422,15 +422,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "### Implement the code for an extended lifetime of 5, 10 and 15 years.\n",
+    "\n",
+    "Use a discount rate of 10% for all cases"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "outputs": [],
-   "source": []
+   }
   }
  ],
  "metadata": {
